Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30615

Can't read from I_S.INNODB_SYS_INDEXES when having a discarded tablesace

    XMLWordPrintable

Details

    Description

      When having a discarded tablespace it is not possible to read from INNODB_SYS_INDEXES, the below will fail with ERROR 1105 (HY000): Unknown error, and no further details in SHOW WARNINGS output or the error log.

      CREATE TABLE test.t1(id INT PRIMARY KEY);
      ALTER TABLE test.t1 DISCARD TABLESPACE;
      SELECT * FROM INFORMATION_SCHEMA.INNODB_SYS_INDEXES;
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              hholzgra Hartmut Holzgraefe
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1.75h
                  1d 1.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.